--- a/signin.html
+++ b/signin.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
-<body>
+<body style="background: url(images/bg1.jpg); background-size: 100%;">
     <!-- Navbar Start -->
     <nav style="background-color: rgb(151, 0, 0);" class="navbar navbar-expand-lg navbar" data-bs-theme="light">
         <div class="container">
@@ -80,26 +83,27 @@
     <!-- Signin Section START -->
 
     <div class="container w-50">
-        <h1 class="text-center">Sign IN</h1>
+        <h1 class="text-center fw-bold text-light mt-4">Sign in</h1>
         <form class="row g-3" id="myform">
 
             <div class="col-md-12">
-                <label for="name" class="form-label">Name</label>
+                <label for="name" class="form-label text-white fw-bold fs-5">Name</label>
                 <input type="text" class="form-control" id="name" required>
             </div>
 
             <div class="col-md-12">
-                <label for="password" class="form-label">Password</label>
+                <label for="password" class="form-label text-white fw-bold fs-5">Password</label>
                 <input type="password" class="form-control" id="password" required>
             </div>
 
 
             <div class="col-12">
-                <button type="submit" class="btn btn-primary" onclick="signin()">Sign In</button>
+                <button type="submit" class="btn btn-danger" onclick="signin()">Sign In</button>
             </div>
         </form>
     </div>
 
+    <br><br><br><br><br><br><br><br><br><br><br>
     <!-- javascript -->
     <script>
 
@@ -126,6 +130,128 @@
     </script>
     <!-- javascript -->
     <!-- Signin Section END -->
+    
+
+     <!-- footer Section START -->
+   <footer style="background-color:  rgb(151, 0, 0);" class="text-light">
+    <div class="container text-center text-md-start">
+
+        <hr>
+
+
+        <div class="row text-center text-md-start">
+
+
+            <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+                <h3>Subscribe to Our Newsletter</h3>
+
+                <p>Stay updated with the latest travel news, destination guides, and exclusive offers!</p>
+
+                <form action="/subscribe" method="post">
+                    <div class="mt-4 d-flex">
+                        <label for="email" class="form-label mt-2 fs-4">Email:</label>
+                        <input style="font-size: 13px;" type="email" class="ms-2 w-50" id="email" name="email"
+                            required>
+                        <button type="submit" class="btn btn-danger">Subscribe</button>
+
+                    </div>
+                </form>
+            </div>
+
+
+            <div class="col-md-4 col-lg-4 col-sm-12 mt-4">
+                <h5 class="text-uppercase mb-4 font-weight-bold" style="color: #ffffff;">About Us
+                </h5>
+
+                <hr class="mb-4">
+                <p style="font-size: 15px;">Welcome to our Trip Website, your one-stop destination for all things
+                    travel! Discover
+                    breathtaking destinations, find expertly crafted itineraries, connect with fellow travelers, and
+                    get insider travel tips. Start your journey with us and create unforgettable memories on your
+                    next adventure! Happy travels!</p>
+            </div>
+
+
+
+
+            <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+
+                <h5 class="text-uppercase mb-4 font-weight-bold " style="color: #ffffff;">Contact
+                </h5>
+                <hr class="mb-4">
+                <p>
+                    <li class="fas fa-home mr-3 me-2"></li>Pakistan
+                </p>
+
+                <p>
+                    <li class="fas fa-envelope mr-3 me-2"></li>huzaifatariqaptech@gmail.com
+                </p>
+
+                <p>
+                    <li class="fas fa-phone mr-3 me-2"></li>+923370335983
+                </p>
+
+            </div>
+
+
+
+            <hr class="mb-4">
+
+
+
+            <div class="d-flex justify-content-center">
+                <div class="text-end">
+                    <ul class="list-unstyled list-inline">
+                        <a href="https://www.facebook.com/" target="_blank"
+                            class="text-white text-decoration-none fs-5">
+                            <li class="list-inline-item">
+                            <li class="fab fa-facebook"></li>
+                            </li>
+                        </a>
+                        <a href="https://twitter.com/" target="_blank" class="text-white text-decoration-none fs-5">
+                            <li class="list-inline-item">
+                            <li class="fab fa-twitter"></li>
+                            </li>
+                        </a>
+                        <a href="https://www.linkedin.com/" target="_blank"
+                            class="text-white text-decoration-none fs-5">
+                            <li class="list-inline-item">
+                            <li class="fab fa-linkedin-in"></li>
+                            </li>
+                        </a>
+                        <a href="#" target="_blank" class="text-white text-decoration-none fs-5">
+                            <li class="list-inline-item">
+
+                            <li class="fab fa-youtube"></li>
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+
+                <br>
+
+
+            </div>
+
+
+
+        </div>
+
+
+        <div class="row d-flex justify-content-start text-center ">
+            <div>
+                <p>
+                    &copy; Tripgenix 2023
+
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
+</footer>
+<!-- footer Section END -->
 
 
 
