--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2">
-                    <a href="#">
+                    <a href="islamabad.html">
                         <img src="images/724981.jpg" alt="" width="100%" height="280px" class="rounded-3">
                         <h3 class="ps-4 textCity islamabad">Islamabad</h3>
                     </a>
@@ -132,21 +132,21 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 col-sm-4 mt-3">
-                    <a href="#">
+                    <a href="murree.html">
                         <img src="images/Murree.jpg" alt="" width="100%" height="240px" class="rounded-3">
                         <h3 class="ps-4 textCity dubai">Murree</h3>
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-md-4 col-sm-4 mt-3">
-                    <a href="#">
+                    <a href="lahore.html">
                         <img src="images/Lahore.jpeg" alt="" width="100%" height="240px" class="rounded-3">
                         <h3 class="ps-4 textCity karachi">Lahore</h3>
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-md-4 col-sm-4 mt-3">
-                    <a href="#">
+                    <a href="rawalpindi.html">
                         <img src="images/rawalpindi.jpg" alt="" width="100%" height="240px" class="rounded-3">
                         <h3 class="ps-4 textCity istanbul">Rawalpindi</h3>
                     </a>
@@ -173,7 +173,7 @@
             <div class="slider swiper mySwiper mt-3">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#">
+                        <a href="karachi.html">
                             <div class="image">
                                 <img src="images/Karachi.jpeg" alt="">
                                 <div class="text">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="islamabad.html">
                         <div class="image">
                             <img src="images/Islamabad.jpeg" alt="">
                             <div class="text">
@@ -196,7 +196,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="lahore.html">
                         <div class="image">
                             <img src="images/Lahore.jpeg" alt="">
                             <div class="text">
@@ -207,7 +207,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="quetta.html">
                         <div class="image">
                             <img src="images/Quetta_cantt.jpg" alt="">
                             <div class="text">
@@ -218,7 +218,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="bhawalpur.html">
                         <div class="image">
                             <img src="images/Bhawalpur.jpg" alt="">
                             <div class="text">
@@ -229,7 +229,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="skardu.html">
                         <div class="image">
                             <img src="images/Skardu.jpg" alt="">
                             <div class="text">
@@ -240,7 +240,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="bhurban.html">
                         <div class="image">
                             <img src="images/Bhurban.jpg" alt="">
                             <div class="text">
@@ -251,18 +251,18 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="nathiagali.html">
                         <div class="image">
                             <img src="images/Nathagali.jpeg" alt="">
                             <div class="text">
-                                <h4>Nathagali</h4>
+                                <h4>Nathiagali</h4>
                                 <p>3 properties</p>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="murree.html">
                         <div class="image">
                             <img src="images/Murree.jpg" alt="">
                             <div class="text">
@@ -273,7 +273,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="hunza_valley.html">
                         <div class="image">
                             <img src="images/Hunzavalley.jpg" alt="">
                             <div class="text">
@@ -284,7 +284,7 @@
                     </a>
                 </div>
                 <div class="swiper-slide">
-                    <a href="#">
+                    <a href="rawalpindi.html">
                         <div class="image">
                             <img src="images/Rawalpindi.jpg" alt="">
                             <div class="text">
