--- a/bhurban.html
+++ b/bhurban.html
@@ -78,8 +78,8 @@
 
 
     <div style="height: 210px;" class="text-with-image rounded-bottom-5">
-        <h1 style="background-image: url(images/mazare_qaid.jpeg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
-          KARACHI
+        <h1 style="background-image: url(images/bhurban.jpg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
+          BHURBAN
         </h1>
     </div>
 
