--- a/hunza_valley.html
+++ b/hunza_valley.html
@@ -77,9 +77,9 @@
     </nav>
 
 
-    <div style="height: 210px;" class="text-with-image rounded-bottom-5">
-        <h1 style="background-image: url(images/mazare_qaid.jpeg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
-          KARACHI
+    <div style="height: 230px;" class="text-with-image rounded-bottom-5">
+        <h1 style="background-image: url(images/Hunzavalley.jpg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
+          HUNZA VALLEY
         </h1>
     </div>
 
