--- a/islamabad.html
+++ b/islamabad.html
@@ -77,9 +77,9 @@
     </nav>
 
 
-    <div style="height: 210px;" class="text-with-image rounded-bottom-5">
-        <h1 style="background-image: url(images/mazare_qaid.jpeg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
-          KARACHI
+    <div style="height: 210px;" class="text-with-image rounded-bottom-5 container-fluid fs-1">
+        <h1 style="background-image: url(images/Islamabad.jpeg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
+          ISLAMABAD
         </h1>
     </div>
 
