--- a/murree.html
+++ b/murree.html
@@ -77,12 +77,11 @@
     </nav>
 
 
-    <div style="height: 210px;" class="text-with-image rounded-bottom-5">
-        <h1 style="background-image: url(images/mazare_qaid.jpeg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
-          KARACHI
+    <div style="height: 210px;" class="text-with-image rounded-bottom-5 container-fluid fs-1">
+        <h1 style="background-image: url(images/Murree_city.jpg); font-weight: bold; font-family: roboto,sans-serif;" class="image-text">
+          MURREE
         </h1>
     </div>
-
 
 
 
