--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <div class="col-lg-4 col-md-4 col-sm-4 mt-3">
                     <a href="rawalpindi.html">
-                        <img src="images/rawalpindi.jpg" alt="" width="100%" height="240px" class="rounded-3">
+                        <img src="images/FJWU_main_building.jpeg" alt="" width="100%" height="240px" class="rounded-3">
                         <h3 class="ps-4 textCity istanbul">Rawalpindi</h3>
                     </a>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="swiper-slide">
                     <a href="rawalpindi.html">
                         <div class="image">
-                            <img src="images/Rawalpindi.jpg" alt="">
+                            <img src="images/FJWU_main_building.jpeg" alt="">
                             <div class="text">
                                 <h4>Rawalpindi</h4>
                                 <p>141 properties</p>
